# PANTONE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
pantone/: model.py
