[tool.poetry]
name = "pantone"
version = "0.1.0"
description = ""
authors = ["Celeste Villaverde <celeste.villaverde@springlabs.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-contrib-python = "^4.5.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
